--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'java'
+	id 'org.sonarqube' version '6.0.1.5171'
 	id 'org.springframework.boot' version '3.4.2'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
@@ -45,6 +46,13 @@ dependencies {
 dependencyManagement {
 	imports {
 		mavenBom "io.sentry:sentry-bom:${sentryVersion}"
+	}
+}
+
+sonar {
+	properties {
+		property "sonar.projectKey", "bookig"
+		property "sonar.projectName", "bookig"
 	}
 }
 
