set project name for sonar

--- a/build.gradle
+++ b/build.gradle
@@ -51,8 +51,8 @@ dependencyManagement {
 
 sonar {
 	properties {
-		property "sonar.projectKey", "bookig"
-		property "sonar.projectName", "bookig"
+		property "sonar.projectKey", "${project.name}"
+		property "sonar.projectName", "${project.name}"
 	}
 }
 
