--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,11 @@ spring:
   application:
     name: hotels
   datasource:
-    url: ${DB_URL:jdbc:postgresql://localhost:5432/warehouse}
-    username: ${DB_USERNAME:admin}
-    password: ${DB_PASSWORD:localpass}
+    url: jdbc:mysql://localhost:3306/booking
+    username: ${DB_USERNAME:root}
+    password: ${DB_PASSWORD:password}
   flyway:
+    enabled: false
     default-schema: entities
   jpa:
     hibernate:
