change db password

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,12 @@ spring:
   datasource:
     url: ${DB_URL:jdbc:postgresql://localhost:5432/hotels}
     username: ${DB_USERNAME:admin}
-    password: ${DB_PASSWORD:admin}
+    password: ${DB_PASSWORD:password}
   flyway:
+    enabled: true
+    schemas: public
     default-schema: public
+    validate-on-migrate: true
   jpa:
     hibernate:
       ddl-auto: validate
