--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,7 @@
 plugins {
 	id 'java'
-	id 'org.sonarqube' version '6.0.1.5171'
-	id 'org.springframework.boot' version '3.4.2'
-	id 'io.spring.dependency-management' version '1.1.7'
+	id 'org.springframework.boot' version '3.4.5'
+	id("io.spring.dependency-management") version "1.1.7"
 }
 
 group = 'com.diploma'
@@ -14,46 +13,25 @@ java {
 	}
 }
 
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
-}
-
 repositories {
 	mavenCentral()
 }
 
-ext {
-	set('sentryVersion', "8.1.0")
-}
-
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'io.sentry:sentry-spring-boot-starter-jakarta'
-//	implementation 'org.flywaydb:flyway-core'
-//	implementation 'org.flywaydb:flyway-mysql'
+	implementation('org.springframework.boot:spring-boot-starter-web')
+	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+
+	implementation("org.flywaydb:flyway-core:11.8.1")
+	implementation("org.postgresql:postgresql:42.7.5")
+	runtimeOnly("org.flywaydb:flyway-database-postgresql:11.8.1")
+
 	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-//	runtimeOnly 'com.mysql:mysql-connector-j'
+
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-}
-
-dependencyManagement {
-	imports {
-		mavenBom "io.sentry:sentry-bom:${sentryVersion}"
-	}
-}
-
-sonar {
-	properties {
-		property "sonar.projectKey", "${project.name}"
-		property "sonar.projectName", "${project.name}"
-	}
 }
 
 tasks.named('test') {
